 * Update Gnuplot
 * Update ABCL
 * Update wxMaxima
 * Update wxWidgets
 * Update TCL/TK
 * Update SBCL
 * Support Clozure Common Lisp (for 64 bit installers)
 * Use configured paths to Lisp compilers, this should help,
   if one is building Maxima on Windows (native) and uses
   special paths to the Lisp compilers.
 * Fix calculation of %maxima_prefix% in maxima.bat.in.

Bug fixes for numbered bugs:
----------------------------
 * \#2905: Assigning variable twice yields different results
 * \#3054: limit(exp(exp(2*log(x**5 + x)*log(log(x)))) / exp(exp(10*log(x)*log(log(x)))), x, inf)
 * \#3191: parsing problem: thru 3 for i in [a,b]
 * \#3755: Insecure tmpdir usage
 * \#3803: Xmaxima should reopen the browser when needed
 * \#4117: Unexpected Behaviour of run_viewer and gnu_term dumb
 * \#4154: Some info nodes have bad headers (and no "Up"s)
 * \#4160: LISP error when integrating
 * \#4176: fullratsubst(old = new, expr) returns incorrect result
 * \#4177: lratsubst1 in testsuite
 * \#4179: [XMaxima] Pb in maximizing window
 * \#4184: bessel_simplify error
 * \#4191 limits of gamma_incomplete
 * \#4195: cmucl 21e intermittent lisp error in limit
 * \#4200: simplim%limit ignoring special variables
 * \#4210 tlimit consults global assumptions for limit variable
 * \#4214: read_xpm not autoloading and not documented as requiring load("draw")
 * \#4215: limit(sqrt(-1+%i*x),x,0,minus)
 * \#4218: read_xpm can't handle XPM files generated by ImageMagick and maybe other sources
 * \#4220: tex output does not respect linel
 * \#4222: limit(6^x, x, 1) and similar cases: stack overflow crash
 * \#4227: limit(abs(sin(x))/​sin(x), x, inf) = 1
 * \#4237: implicit_plot punting to plot2d implicit fails when argument is a list of equations
 * \#4238: limit((abs(sin(x)*cos(x)-x^4) -x)/​x^3,x,0,plus) gives internal error
 * \#4245: is(string1<string2) gives Lisp error
 * \#4246: tcl9.0b1 upgrade and xmaxima
 * \#4251: imaxima could not display image with Emacs 29.1