@@ -77,6 +77,8 @@ option(USE_VTK "Use VTK." YES)
 # sets the installation directory to ${WINDOWS_DRIVELETTER}:\maxima-current
 option(BUILD_CURRENT "Build a installer for current Maxima/wxMaxima." NO)
 
+option(WITH_CLISP "Include CLISP in the installer." YES)
+option(WITH_SBCL "Include SBCL in the installer." YES)
 option(WITH_ABCL "Include ABCL in the installer." NO)
 option(WITH_CCL64 "Include CCL64 in the installer." NO)
 
@@ -94,8 +96,24 @@ option(WITH_CCL64 "Include CCL64 in the installer." NO)
 #  - ABCL (optional) is a Java based Lisp.
 #  - CCL64 (optional) support is very new.
 
-# ABCL_STYLE/CCL64 style is used for licenses.html
-# ABCL_ENABLED/CCL64_ENABLE for lispselector.tcl
+# $lisp_STYLE is used for licenses.html
+# $lisp_ENABLED for lispselector.tcl
+if(WITH_CLISP)
+    set(CLISP_STYLE "")
+    set(CLISP_ENABLED 1)
+else()
+    set(CLISP_STYLE "display: none;")
+    set(CLISP_ENABLED 0)
+endif()
+
+if(WITH_SBCL)
+    set(SBCL_STYLE "")
+    set(SBCL_ENABLED 1)
+else()
+    set(SBCL_STYLE "display: none;")
+    set(SBCL_ENABLED 0)
+endif()
+
 if(WITH_ABCL)
     set(ABCL_STYLE "")
     set(ABCL_ENABLED 1)
@@ -120,12 +138,6 @@ set_property(CACHE WITH_DEFAULT_LISP PROPERTY STRINGS "clisp" "sbcl" "abcl" "ccl
 # If no further patches are needed, you should get a
 # updated setup-file automatically.
 
-# current program versions
-set(CLISPVERSION 2.49)
-
-
-# MD5 checksums for the current program versions.
-set(CLISP_MD5 "8d58d64f83dd7ad01c054aecc16c1f52")
 
 if(BUILD_CURRENT)
     set(USE_WXMAXIMA_GIT YES)
@@ -159,8 +171,6 @@ if(Git_FOUND)
     endif()
 endif()
 
-# download URLs
-set(CLISP_URL "https://downloads.sourceforge.net/project/clisp/clisp/${CLISPVERSION}/clisp-${CLISPVERSION}-win32-mingw-big.zip")
 
 
 # Where are libgcc and libstdc++?
@@ -204,22 +214,6 @@ endif()
 include(ExternalProject)
 
 
-# Clisp (already a binary package just extract it...)
-#
-# What is the difference between clisp-2.49-win32-mingw-big.zip and clisp-2.49-win32-mingw-small.zip?
-# What should be used for running Maxima?
-externalproject_add(clisp
-  URL "${CLISP_URL}"
-  DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
-  URL_MD5 ${CLISP_MD5}
-  CONFIGURE_COMMAND ""
-  BUILD_COMMAND ""
-  INSTALL_COMMAND ""
-)
-install(DIRECTORY ${CMAKE_BINARY_DIR}/clisp-prefix/src/clisp/ DESTINATION clisp-${CLISPVERSION} COMPONENT Clisp)
-
-add_subdirectory("sbcl/")
-
 add_subdirectory("gnuplot/")
 
 add_subdirectory("tcltk/")
@@ -237,46 +231,71 @@ else()
     set(VTK_STYLE "display: none;")
 endif()
 
+if(WITH_CLISP)
+    add_subdirectory("clisp/")
+    set(CLISP_CONFIGURE --enable-clisp --with-clisp=${CMAKE_BINARY_DIR}/wine-clisp.sh --with-clisp-runtime=${CMAKE_BINARY_DIR}/wine-lisp.sh)
+    set(CLISP_DEPENDS "clisp")
+    set(CLISP_ENABLED 1)
+    set(CLISP_DEP_CORR1 $(MAKE) -C src clisp-depends.mk)
+    set(CLISP_DEP_CORR2 sed -i s+\\\\+/+g src/clisp-depends.mk)
+else()
+    set(CLISP_CONFIGURE "")
+    set(CLISP_DEPENDS "")
+    set(CLISP_ENABLED 0)
+    set(CLISP_DEP_CORR1 "")
+    set(CLISP_DEP_CORR2 "")
+endif()
+
+if(WITH_SBCL)
+    add_subdirectory("sbcl/")
+    set(SBCL_CONFIGURE --enable-sbcl --with-sbcl=${CMAKE_BINARY_DIR}/wine-sbcl.sh)
+    set(SBCL_DEPENDS "sbcl")
+    set(SBCL_ENABLED 1)
+else()
+    set(SBCL_CONFIGURE "")
+    set(SBCL_DEPENDS "")
+    set(SBCL_ENABLED 0)
+endif()
+
 if(WITH_ABCL)
     add_subdirectory("abcl/")
-    set(ABCL_ENABLE "--enable-abcl")
+    set(ABCL_CONFIGURE --enable-abcl --with-abcl-jar=${CMAKE_BINARY_DIR}/abcl/abcl-prefix/src/abcl/abcl.jar)
     set(ABCL_DEPENDS "abcl")
-    set(ABCL_JAR "--with-abcl-jar=${CMAKE_BINARY_DIR}/abcl/abcl-prefix/src/abcl/abcl.jar")
+    set(ABCL_ENABLED 0)
 else()
-    set(ABCL_ENABLE "")
+    set(ABCL_CONFIGURE "")
     set(ABCL_DEPENDS "")
-    set(ABCL_JAR "")
+    set(ABCL_ENABLED 1)
 endif()
+
 if(WITH_CCL64)
     add_subdirectory("ccl/")
-    set(CCL64_ENABLE "--enable-ccl64")
+    set(CCL64_CONFIGURE --enable-ccl64 --with-ccl64=${CMAKE_BINARY_DIR}/wine-ccl.sh)
     set(CCL64_DEPENDS "ccl")
-    set(CCL64_EXECUTABLE "--with-ccl64=${CMAKE_BINARY_DIR}/wine-ccl.sh")
-    configure_file("${CMAKE_SOURCE_DIR}/wine-ccl.sh.tmpl" "${CMAKE_BINARY_DIR}/wine-ccl.sh")
     set(CCL_ENABLED 1)
 else()
-    set(CCL64_ENABLE "")
+    set(CCL64_CONFIGURE "")
     set(CCL64_DEPENDS "")
-    set(CCL64_EXECUTABLE "")
     set(CCL_ENABLED 0)
 endif()
 
 configure_file("${CMAKE_SOURCE_DIR}/wine-clisp.sh.tmpl" "${CMAKE_BINARY_DIR}/wine-clisp.sh")
 configure_file("${CMAKE_SOURCE_DIR}/wine-lisp.sh.tmpl" "${CMAKE_BINARY_DIR}/wine-lisp.sh")
 configure_file("${CMAKE_SOURCE_DIR}/wine-sbcl.sh.tmpl" "${CMAKE_BINARY_DIR}/wine-sbcl.sh")
+configure_file("${CMAKE_SOURCE_DIR}/wine-ccl.sh.tmpl" "${CMAKE_BINARY_DIR}/wine-ccl.sh")
 
 externalproject_add(maxima
   # first copy the maxima source to a build directory, since out-of-source-builds do not work
   DOWNLOAD_COMMAND rsync -a --exclude=crosscompile-windows/build/ "${CMAKE_SOURCE_DIR}/../"  "${CMAKE_BINARY_DIR}/maxima-prefix/src/maxima"
-  DEPENDS clisp sbcl tcl tk texinfo ${ABCL_DEPENDS} ${CCL64_DEPENDS}
+  DEPENDS  tcl tk texinfo ${CLISP_DEPENDS} ${SBCL_DEPENDS} ${ABCL_DEPENDS} ${CCL64_DEPENDS}
   BUILD_IN_SOURCE 1
   CONFIGURE_COMMAND sh -c "test -x ./bootstrap && ./bootstrap || return 0"
-            COMMAND PATH=${CMAKE_BINARY_DIR}/texinfo-installroot/bin:$ENV{PATH} LANG=C ./configure --host=${HOST} --enable-clisp --with-clisp=${CMAKE_BINARY_DIR}/wine-clisp.sh --with-clisp-runtime=${CMAKE_BINARY_DIR}/wine-lisp.sh --enable-sbcl --with-sbcl=${CMAKE_BINARY_DIR}/wine-sbcl.sh ${ABCL_ENABLE} "${ABCL_JAR}" ${CCL64_ENABLE} "${CCL64_EXECUTABLE}" --with-default-lisp=${WITH_DEFAULT_LISP} --prefix=${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}
-  # clisp-depends.mk is generated with "\" as path separator, not "/" - correct that...
+            COMMAND PATH=${CMAKE_BINARY_DIR}/texinfo-installroot/bin:$ENV{PATH} LANG=C ./configure --host=${HOST} ${CLISP_CONFIGURE} ${SBCL_CONFIGURE} ${ABCL_CONFIGURE} ${CCL64_CONFIGURE} --with-default-lisp=${WITH_DEFAULT_LISP} --prefix=${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}
+  # clisp-depends.mk is generated with "\" as path separator, not "/" - correct that... (${CLISP_DEP_CORR1+2})
   # during the crosscompiling procedure, we call configure with shell scripts (wine-xyz.sh) to use the Windows versions.
   # change that after compiliation to the real binaries (clisp.exe for CLISP, sbcl.exe for SBCL, wx86cl64.exe for CCL64).
-  BUILD_COMMAND LANG=C $(MAKE) -C src clisp-depends.mk
-        COMMAND sed -i s+\\\\+/+g src/clisp-depends.mk
+  BUILD_COMMAND ${CLISP_DEP_CORR1}
+        COMMAND ${CLISP_DEP_CORR2}
         COMMAND PATH=${CMAKE_BINARY_DIR}/texinfo-installroot/bin:$ENV{PATH} LANG=C $(MAKE)
         COMMAND PATH=${CMAKE_BINARY_DIR}/texinfo-installroot/bin:$ENV{PATH} LANG=C $(MAKE) pdf
         COMMAND sed -i s+^.*wine-clisp.sh+clisp.exe+g src/maxima.bat
@@ -309,10 +328,19 @@ install(FILES "${CMAKE_SOURCE_DIR}/../interfaces/xmaxima/win32/win_signals.lisp"
 
 
 install(DIRECTORY ${CMAKE_BINARY_DIR}/maxima-installroot/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/
-        DESTINATION . COMPONENT Maxima PATTERN "binary-abcl" EXCLUDE PATTERN "binary-ccl64" EXCLUDE)
+        DESTINATION . COMPONENT Maxima 
+        PATTERN "binary-clisp" EXCLUDE PATTERN "binary-sbcl" EXCLUDE PATTERN "binary-abcl" EXCLUDE PATTERN "binary-ccl64" EXCLUDE)
 if(WITH_ABCL)
     install(DIRECTORY ${CMAKE_BINARY_DIR}/maxima-installroot/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/
             DESTINATION . COMPONENT ABCL PATTERN "binary-abcl")
+endif()
+if(WITH_CLISP)
+    install(DIRECTORY ${CMAKE_BINARY_DIR}/maxima-installroot/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/
+            DESTINATION . COMPONENT CLISP PATTERN "binary-clisp")
+endif()
+if(WITH_SBCL)
+    install(DIRECTORY ${CMAKE_BINARY_DIR}/maxima-installroot/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/
+            DESTINATION . COMPONENT SBCL PATTERN "binary-sbcl")
 endif()
 if(WITH_CCL64)
     install(DIRECTORY ${CMAKE_BINARY_DIR}/maxima-installroot/${WINDOWS_DRIVELETTER}:/maxima-${MAXIMAVERSION}/
@@ -362,8 +390,7 @@ set(CPACK_NSIS_MUI_WELCOMEFINISHPAGE_BITMAP "${CMAKE_SOURCE_DIR}/maxima-installe
 include(CPack)
 
 cpack_add_component(Maxima
-                    DESCRIPTION "The Maxima computer algebra system.\nRequired."
-                    REQUIRED)
+                    DESCRIPTION "The Maxima computer algebra system.\nRequired." REQUIRED)
 
 if(USE_VTK)
     cpack_add_component(VTK
@@ -375,24 +402,24 @@ cpack_add_component(Gnuplot
 
 cpack_add_component(wxMaxima
                     DESCRIPTION "wxMaxima is an advanced GUI for Maxima based on wxWidgets.\nInstallation is strongly recommended.")
+if(WITH_CLISP)
+    cpack_add_component(Clisp
+                        DESCRIPTION "The CLISP Lisp compiler.\nOne Lisp compiler is required.")
+endif()
+if(WITH_SBCL)
+    cpack_add_component(SBCL
+                        DESCRIPTION "The SBCL Lisp compiler.\nOne Lisp compiler is required.")
+endif()
 
-cpack_add_component(Clisp
-                    DESCRIPTION "The CLISP Lisp compiler.\nRequired."
-                    REQUIRED)
-
-cpack_add_component(SBCL
-                    DESCRIPTION "The SBCL Lisp compiler.\nRequired."
-                    REQUIRED)
-
-cpack_add_component(TclTk
-                    DISPLAY_NAME "Tcl/Tk"
-                    DESCRIPTION "The TCL/TK scripting language.\nRequired."
-                    REQUIRED)
 if(WITH_ABCL)
     cpack_add_component(ABCL
-                        DESCRIPTION "The ABCL Lisp compiler.\nA Java installation is required.\nOptional.")
+                        DESCRIPTION "The ABCL Lisp compiler.\nA Java installation is required.\nOne Lisp compiler is required.")
 endif()
 if(WITH_CCL64)
     cpack_add_component(CCL64
-                        DESCRIPTION "The CCL (64Bit) Lisp compiler.\nOptional.")
+                        DESCRIPTION "The CCL (64Bit) Lisp compiler.\nOne Lisp compiler is required.")
 endif()
+
+cpack_add_component(TclTk
+                    DISPLAY_NAME "Tcl/Tk"
+                    DESCRIPTION "The TCL/TK scripting language.\nRequired." REQUIRED)
