@@ -1,0 +1,35 @@
+# CMake file for crosscompiling Maxima/wxMaxima for Windows
+# SPDX-License-Identifier: GPL-2.0-or-later
+# Copyright (C) by Wolfgang Dautermann
+# License GPLv2+: GNU GPL version 2 or later <http://gnu.org/licenses/gpl.html>
+# This is free software: you are free to change and redistribute it.
+# There is NO WARRANTY, to the extent permitted by law.
+
+# If you want to use a updated version of a program,
+# update the version number and the checksum.
+# If no further patches are needed, you should get a
+# updated setup-file automatically.
+
+# current program versions
+set(CLISPVERSION 2.49)
+
+# MD5 checksums for the current program versions.
+set(CLISP_MD5 "8d58d64f83dd7ad01c054aecc16c1f52")
+
+# download URLs
+set(CLISP_URL "https://downloads.sourceforge.net/project/clisp/clisp/${CLISPVERSION}/clisp-${CLISPVERSION}-win32-mingw-big.zip")
+
+
+# Clisp (already a binary package just extract it...)
+#
+# What is the difference between clisp-2.49-win32-mingw-big.zip and clisp-2.49-win32-mingw-small.zip?
+# What should be used for running Maxima?
+externalproject_add(clisp
+  URL "${CLISP_URL}"
+  DOWNLOAD_DIR ${CMAKE_SOURCE_DIR}/downloads
+  URL_MD5 ${CLISP_MD5}
+  CONFIGURE_COMMAND ""
+  BUILD_COMMAND ""
+  INSTALL_COMMAND ""
+)
+install(DIRECTORY ${CMAKE_BINARY_DIR}/clisp/clisp-prefix/src/clisp/ DESTINATION clisp-${CLISPVERSION} COMPONENT CLISP)
