@@ -2,9 +2,10 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 # Simple GUI for selecting the default Lisp for Windows users.
 
-#  @ABCL_ENABLED@ will be replaced by 0 or 1 in the final program.
+#  @lispXY_ENABLED@ will be replaced by 0 or 1 in the final program.
+set clisp @CLISP_ENABLED@
+set sbcl @SBCL_ENABLED@
 set abcl @ABCL_ENABLED@
-#  @CCL_ENABLED@ will be replaced by 0 or 1 in the final program.
 set ccl @CCL_ENABLED@
 
 proc selectclisp {} {
@@ -48,12 +49,11 @@ set binpath [file dirname [file normalize [info script]]]
 set documentation "One can use different LISP (the programming language, in which Maxima is (mostly) written) compilers for running Maxima.
 
 Currently this Windows installer supports:
-- CLISP (http://www.clisp.org)
-- SBCL (https://www.sbcl.org).
 "
 
+if {$clisp == 1} { append documentation "- ABCL (https://www.clisp.org)" }
+if {$sbcl == 1} { append documentation "- ABCL (https://www.sbcl.org)" }
 if {$abcl == 1} { append documentation "- ABCL (https://www.abcl.org)" }
-
 if {$ccl == 1} { append documentation "- CCL (https://ccl.clozure.com)" }
 
 append documentation "
@@ -84,13 +84,13 @@ If the configuration file already exists, it will be overwritten.
 
 # Buttons (clisp, sbcl, exit)
 frame .toolbar
-button .toolbar.clisp -text "Select CLISP" -command "selectclisp"
-button .toolbar.sbcl -text "Select SBCL" -command "selectsbcl"
+if {$clisp == 1} { button .toolbar.clisp -text "Select CLISP" -command "selectclisp" }
+if {$sbcl == 1} { button .toolbar.sbcl -text "Select SBCL" -command "selectsbcl" }
 if {$abcl == 1} { button .toolbar.abcl -text "Select ABCL" -command "selectabcl" }
 if {$ccl == 1} { button .toolbar.ccl -text "Select CCL" -command "selectccl" }
 button .toolbar.exit -text "Exit" -command "exit"
-pack .toolbar.clisp -side left
-pack .toolbar.sbcl -side left
+if {$clisp == 1} { pack .toolbar.clisp -side left }
+if {$sbcl == 1} { pack .toolbar.sbcl -side left }
 if {$abcl == 1} { pack .toolbar.abcl -side left }
 if {$ccl == 1} { pack .toolbar.ccl -side left }
 pack .toolbar.exit -side right
@@ -101,7 +101,7 @@ label .docu.label -text $documentation
 pack .docu.label -padx 50 -pady 50
 
 
-wm title . "Maxima Open Source Computer Algebra System - Select LISP Compiler"
+wm title . "Maxima Open Source Computer Algebra System - Select the LISP Compiler"
 grid config .toolbar -column 0 -row 1 -sticky "snew"
 grid config .docu    -column 0 -row 2
 
