@@ -6,4 +6,4 @@ export WINEPREFIX
 WINEDLLOVERRIDES="mscoree,mshtml="
 export WINEDLLOVERRIDES
 unset DISPLAY
-@WINE_EXE@ @CMAKE_BINARY_DIR@/clisp-prefix/src/clisp/clisp.exe "$@"
+@WINE_EXE@ @CMAKE_BINARY_DIR@/clisp/clisp-prefix/src/clisp/clisp.exe "$@"
